fix some call api

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,15 @@
-Need to ask for bluetooth, but it now ask for location )))). //Android under 12 need to do that ))
+Sorry, mom. But i will try and complete this.
 
 In this holiday
 - Learn Signnal
 - Merge bluetooth and wifi
 - Complete TV and Air Conditioner
+
+Flow:
+1, First button on Home
+App                       ESP
+- Add newharware to 
+connect socket                        
+- Click add remote        -> Add remote
+- If know protocol        -> Remote ON, OFF
+
