--- a/todo.txt
+++ b/todo.txt
@@ -13,3 +13,7 @@ connect socket
 - Click add remote        -> Add remote
 - If know protocol        -> Remote ON, OFF
 
+NOTE:
+MUST to test learn Signnal before all of another function, because it have to rewrite data
+MUST send learn before Send Script
+
